--- a/index.html
+++ b/index.html
@@ -185,6 +185,144 @@
       </div>
    </section>
 
+   <section id="features">
+      <div class="container">
+         <div class="row">
+            <div class="col-12 section-intro">
+               <h1>Our Features</h1>
+               <div class="hline"></div>
+            </div>
+         </div>
+         <div class="row gy-4">
+            <div class="col-lg-4 col-sm-6 feature d-flex">
+               <div class="icon-box me-3">
+                  <i class="bx bx-check"></i>
+               </div>
+               <div>
+                  <h5 class="title-sm">Feature</h5>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit incidunt inventore quibusdam accusamus esse.</p>
+               </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 feature d-flex">
+               <div class="icon-box me-3">
+                  <i class="bx bx-check"></i>
+               </div>
+               <div>
+                  <h5 class="title-sm">Feature</h5>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit incidunt inventore quibusdam accusamus esse.</p>
+               </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 feature d-flex">
+               <div class="icon-box me-3">
+                  <i class="bx bx-check"></i>
+               </div>
+               <div>
+                  <h5 class="title-sm">Feature</h5>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit incidunt inventore quibusdam accusamus esse.</p>
+               </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 feature d-flex">
+               <div class="icon-box me-3">
+                  <i class="bx bx-check"></i>
+               </div>
+               <div>
+                  <h5 class="title-sm">Feature</h5>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit incidunt inventore quibusdam accusamus esse.</p>
+               </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 feature d-flex">
+               <div class="icon-box me-3">
+                  <i class="bx bx-check"></i>
+               </div>
+               <div>
+                  <h5 class="title-sm">Feature</h5>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit incidunt inventore quibusdam accusamus esse.</p>
+               </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 feature d-flex">
+               <div class="icon-box me-3">
+                  <i class="bx bx-check"></i>
+               </div>
+               <div>
+                  <h5 class="title-sm">Feature</h5>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit incidunt inventore quibusdam accusamus esse.</p>
+               </div>
+            </div>
+         </div>
+      </div>
+   </section>
+
+   <section id="team" class="row g-0 py-0 text-center">
+      <div class="col-lg-3 col-sm-6 team-member">
+         <div class="team-member-img">
+            <img src="img/team-3-800x800.jpg" alt="">
+            <div class="social-icons">
+               <a href="#"><i class="bx bxl-facebook"></i></a>
+               <a href="#"><i class="bx bxl-twitter"></i></a>
+               <a href="#"><i class="bx bxl-instagram"></i></a>
+               <a href="#"><i class="bx bxl-github"></i></a>
+            </div>
+         </div>
+         <div class="p-4">
+            <h5 class="title-sm mt-3 mb-0 text-white">John Foe</h5>
+            <small class="text-white">Web Designer</small>
+            <div class="hline"></div>
+            <p class="text-white">Well skillful lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC</p>
+         </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 team-member even">
+         <div class="team-member-img">
+            <img src="img/team-4-800x800.jpg" alt="">
+            <div class="social-icons">
+               <a href="#"><i class="bx bxl-facebook"></i></a>
+               <a href="#"><i class="bx bxl-twitter"></i></a>
+               <a href="#"><i class="bx bxl-instagram"></i></a>
+               <a href="#"><i class="bx bxl-github"></i></a>
+            </div>
+         </div>
+         <div class="p-4">
+            <h5 class="title-sm mt-3 mb-0 text-white">John Foe</h5>
+            <small class="text-white">Web Designer</small>
+            <div class="hline"></div>
+            <p class="text-white">Well skillful lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC</p>
+         </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 team-member">
+         <div class="team-member-img">
+            <img src="img/team-6-800x800.jpg" alt="">
+            <div class="social-icons">
+               <a href="#"><i class="bx bxl-facebook"></i></a>
+               <a href="#"><i class="bx bxl-twitter"></i></a>
+               <a href="#"><i class="bx bxl-instagram"></i></a>
+               <a href="#"><i class="bx bxl-github"></i></a>
+            </div>
+         </div>
+         <div class="p-4">
+            <h5 class="title-sm mt-3 mb-0 text-white">John Foe</h5>
+            <small class="text-white">Web Designer</small>
+            <div class="hline"></div>
+            <p class="text-white">Well skillful lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC</p>
+         </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 team-member even">
+         <div class="team-member-img">
+            <img src="img/team-8-800x800.jpg" alt="">
+            <div class="social-icons">
+               <a href="#"><i class="bx bxl-facebook"></i></a>
+               <a href="#"><i class="bx bxl-twitter"></i></a>
+               <a href="#"><i class="bx bxl-instagram"></i></a>
+               <a href="#"><i class="bx bxl-github"></i></a>
+            </div>
+         </div>
+         <div class="p-4">
+            <h5 class="title-sm mt-3 mb-0 text-white">John Foe</h5>
+            <small class="text-white">Web Designer</small>
+            <div class="hline"></div>
+            <p class="text-white">Well skillful lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC</p>
+         </div>
+      </div>
+   </section>
+
 
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
