--- a/index.html
+++ b/index.html
@@ -323,7 +323,100 @@
       </div>
    </section>
 
+   <section id="testimonials" class="text-center">
+   <div class="container">
+      <div class="row">
+         <div class="col-12">
+            <ul class="nav nav-pills justify-content-center mb-3" id="pills-tab" role="tablist">
+               <li class="nav-item" role="presentation">
+                 <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">
+                    <img src="img/team-4-800x800.jpg" alt="">
+                 </button>
+               </li>
+               <li class="nav-item" role="presentation">
+                 <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">
+                  <img src="img/team-6-800x800.jpg" alt="">
+                 </button>
+               </li>
+               <li class="nav-item" role="presentation">
+                 <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">
+                  <img src="img/team-8-800x800.jpg" alt="">
+                 </button>
+               </li>
+             </ul>
+             <div class="tab-content" id="pills-tabContent">
+               <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+                  <div class="review">
+                     <div class="stars">
+                        <i class="bx bxs-star"></i>
+                        <i class="bx bxs-star"></i>
+                        <i class="bx bxs-star"></i>
+                        <i class="bx bxs-star"></i>
+                        <i class="bx bx-star"></i>
+                     </div>
+                     <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ea explicabo nisi quia blanditiis assumenda quos veritatis sit deleniti porro nulla temporibus deserunt, iure in labore incidunt quis eos. Accusamus sed excepturi architecto.</p>
+                        <h5 class="title-sm mb-0">John Doe</h5>
+                        <small>Web Developer</small>
+                  </div>
+               </div>
+               <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+                  <div class="review">
+                     <div class="stars">
+                        <i class="bx bxs-star"></i>
+                        <i class="bx bxs-star"></i>
+                        <i class="bx bxs-star"></i>
+                        <i class="bx bxs-star"></i>
+                        <i class="bx bx-star"></i>
+                     </div>
+                     <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ea explicabo nisi quia blanditiis assumenda quos veritatis sit deleniti porro nulla temporibus deserunt, iure in labore incidunt quis eos. Accusamus sed excepturi architecto.</p>
+                     <h5 class="title-sm mb-0">John Doe</h5>
+                     <small>Web Developer</small>
+                  </div>
+               </div>
+               <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
+                  <div class="review">
+                     <div class="stars">
+                        <i class="bx bxs-star"></i>
+                        <i class="bx bxs-star"></i>
+                        <i class="bx bxs-star"></i>
+                        <i class="bx bxs-star"></i>
+                        <i class="bx bx-star"></i>
+                     </div>
+                     <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ea explicabo nisi quia blanditiis assumenda quos veritatis sit deleniti porro nulla temporibus deserunt, iure in labore incidunt quis eos. Accusamus sed excepturi architecto.</p>
+                     <h5 class="title-sm mb-0">John Doe</h5>
+                     <small>Web Developer</small>
+                  </div>
+               </div>
+             </div>
+         </div>
+      </div>
+   </div>
+   </section>
 
+   <section id="clients" class="bg-light">
+      <div class="container">
+         <div class="row gy-4">
+            <div class="col-lg-2 col-md-3 col-6">
+               <img src="img/logo1.svg" alt="">
+            </div>
+            <div class="col-lg-2 col-md-3 col-6">
+               <img src="img/logo2.svg" alt="">
+            </div>
+            <div class="col-lg-2 col-md-3 col-6">
+               <img src="img/logo3.svg" alt="">
+            </div>
+            <div class="col-lg-2 col-md-3 col-6">
+               <img src="img/logo4.svg" alt="">
+            </div>
+            <div class="col-lg-2 col-md-3 col-6">
+               <img src="img/logo5.svg" alt="">
+            </div>
+            <div class="col-lg-2 col-md-3 col-6">
+               <img src="img/logo1.svg" alt="">
+            </div>
+         </div>
+      </div>
+   </section>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="js/bootstrap.bundle.js"></script>
