--- a/index.html
+++ b/index.html
@@ -418,6 +418,102 @@
       </div>
    </section>
 
+   <section id="contact">
+      <div class="container">
+         <div class="row align-items-center">
+            <div class="col-lg-4">
+               <img src="img/cntct.jpg" alt="">
+            </div>
+            <div class="col-lg-6 offset-lg-1">
+               <form>
+                  <div class="mb-3">
+                    <small>Name</small>
+                    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  </div>
+                  <div class="mb-3">
+                     <small>Email</small>
+                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                   </div>
+                   <div class="mb-3">
+                     <small>Name</small>
+                     <textarea name="" id="" cols="30" rows="4" class="form-control"></textarea>
+                   </div>
+                  <button type="submit" class="btn btn-brand">Submit</button>
+                </form>
+            </div>
+         </div>
+      </div>
+   </section>
+
+   <section id="cta" class="py-5">
+      <div class="container py-4">
+         <div class="row justify-content-center">
+            <div class="col-md-6">
+               <h3 class="text-white">Let's build something great.</h3>
+            </div>
+            <div class="col-auto">
+               <a href="#" class="btn btn-light">Get Started</a>
+            </div>
+         </div>
+      </div>
+   </section>
+
+   <footer>
+      <div class="footer-top">
+         <div class="container">
+            <div class="row gy-5">
+               <div class="col-md-4">
+                  <h4 class="logo-text">Consulto</h4>
+                  <p>Praesent vulputate neque nec sem fermentum porttitor. Mauris eget dolor convallis, trista, dignissim sapien. Duis vel felis dictu</p>
+                  <div class="social-icons">
+                     <a href="#"><i class="bx bxl-facebook"></i></a>
+                     <a href="#"><i class="bx bxl-twitter"></i></a>
+                     <a href="#"><i class="bx bxl-instagram"></i></a>
+                     <a href="#"><i class="bx bxl-github"></i></a>
+                  </div>
+               </div>
+               <div class="col-md-2">
+                  <h5 class="title-sm">Navigation</h5>
+                  <div class="footer-links">
+                     <a href="#">Services</a>
+                     <a href="#">Our Work</a>
+                     <a href="#">Team</a>
+                     <a href="#">Blog</a>
+                  </div>
+               </div>
+               <div class="col-md-2">
+                  <h5 class="title-sm">More</h5>
+                  <div class="footer-links">
+                     <a href="#">FAQ's</a>
+                     <a href="#">Privacy & Policy</a>
+                     <a href="#">Liscences</a>
+                  </div>
+               </div>
+               <div class="col-md-2">
+                  <h5 class="title-sm">Contact</h5>
+                  <div class="footer-links">
+                     <p class="mb">Cooke Street, Barking, Essex</p>
+                     <p class="mb-">+44 208 591 9123</p>
+                     <p class="mb">hello@consulto.com</p>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <div class="footer-bottom">
+         <div class="container">
+            <div class="row justify-content-between gy-3">
+               <div class="col-md-6">
+                  <p class="mb-0">© Consulto 2022. All rights reserved</p>
+               </div>
+               <div class="col-auto">
+                  <p class="mb-0">Created with ❤️ by Tony Atayi</p>
+               </div>
+            </div>
+         </div>
+      </div>
+   </footer>
+
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="js/bootstrap.bundle.js"></script>
 </body>
